--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -2,12 +2,13 @@
 is_cluster=false
 # single
 host=127.0.0.1
-#host=172.20.70.44
+#host=172.20.31.63
 port=6667
+# table url
+url=127.0.0.1:6667
 
 # cluster
-#host_nodes=172.20.70.44:6667,172.20.70.46:6667
-host_nodes=172.20.70.44:6667,172.20.70.45:6667,172.20.70.46:6667
+host_nodes=172.20.31.63:6667,172.20.31.65:6667,172.20.31.70:6667
 # common
 user=root
 password=root
