--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <iotdb.version>2.0.0-SNAPSHOT</iotdb.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.iotdb</groupId>
             <artifactId>iotdb-session</artifactId>
-            <version>${iotdb.version}</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -50,6 +49,7 @@
     <build>
         <pluginManagement>
             <plugins>
+                <!--用于编译项目的源代码-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -58,12 +58,13 @@
                         <compilerArgument>-Xlint:unchecked</compilerArgument>
                     </configuration>
                 </plugin>
+                <!--用于在Maven构建生命周期中执行单元测试-->
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <suiteXmlFiles>
-                            <![CDATA[! testng.xml所在的路径，这里指的是相对路径]]>
-<!--                            <suiteXmlFile>${project.build.directory}/src/main/resources/testng.xml</suiteXmlFile>-->
+                            <!--[CDATA[! testng.xml所在的路径，这里指的是相对路径]]-->
+                            <!--<suiteXmlFile>${project.build.directory}/src/main/resources/testng.xml</suiteXmlFile>-->
                             <suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
                         <parallel>none</parallel>
@@ -72,6 +73,7 @@
                     </configuration>
                     <version>3.0.0</version>
                 </plugin>
+                <!--可以生成一个HTML格式的测试报告，显示测试结果的详细信息-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-report-plugin</artifactId>
