--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -1,22 +1,33 @@
-# connection
+# |---------basic configuration---------|
+# Cluster switch
 is_cluster=false
-# single
-host=127.0.0.1
-#host=172.20.70.44
-port=6667
-
-# cluster
-#host_nodes=172.20.70.44:6667,172.20.70.46:6667
-host_nodes=172.20.70.44:6667,172.20.70.45:6667,172.20.70.46:6667
-# common
+# sessionPool switch
+is_sessionPool=false
+# UserName and password
 user=root
 password=root
-
-#
+# Aligned switch
 isAligned=true
+# redundant switch (using tree models)
 verbose=false
+# automatically create switch (using tree models)
 auto_create_schema=true
-
+# Maximum database length (partially used)
 max_database_length=10
-
+# Timestamp (partially used)
 time_base=2022-12-31 23:59:56
+
+# |---------Single configuration---------|
+# Tree model address
+host=127.0.0.1
+port=6667
+# Table model address
+url=127.0.0.1:6667
+
+# |---------Cluster configuration---------|
+# leader node
+hosts=iotdb-63
+# all nodes
+host_nodes=172.20.31.63:6667,172.20.31.65:6667,172.20.31.70:6667
+
+
