--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -12,7 +12,7 @@ isAligned=true
 verbose=false
 # automatically create switch (using tree models)
 auto_create_schema=true
-# Maximum database length (partially used)
+# Maximum database length (Used by template ActiveInBatch class)
 max_database_length=10
 # Timestamp (partially used)
 time_base=2022-12-31 23:59:56
