Add Jacoco code coverage tool configuration

--- a/details/pom.xml
+++ b/details/pom.xml
@@ -15,7 +15,7 @@
             <groupId>org.apache.iotdb.api.test</groupId>
             <artifactId>common</artifactId>
             <version>master</version>
-            <scope>test</scope>
+<!--            <scope>test</scope>-->
         </dependency>
     </dependencies>
 
@@ -24,5 +24,51 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <plugins>
+            <!-- 配置 maven-jar-plugin，包含测试代码 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <!-- 指定主类 -->
+                    <archive>
+                        <manifest>
+                            <mainClass>org.apache.iotdb.api.test.TestRunner</mainClass>
+                        </manifest>
+                    </archive>
+                    <!-- 包含测试代码 -->
+                    <includes>
+                        <include>**/*.class</include>
+                    </includes>
+                    <classesDirectory>${project.basedir}/target/test-classes</classesDirectory>
+                </configuration>
+            </plugin>
+            <!-- 配置 maven-shade-plugin，用于包含第三方依赖 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>*:*</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
