--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -16,6 +16,8 @@ auto_create_schema=true
 max_database_length=10
 # Timestamp (partially used)
 time_base=2022-12-31 23:59:56
+# coverage switch
+is_coverage=false
 
 # |---------Single configuration---------|
 # Tree model address
