--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,14 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <iotdb.version>2.0.5-SNAPSHOT</iotdb.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.iotdb</groupId>
             <artifactId>iotdb-session</artifactId>
-            <version>2.0.4-SNAPSHOT</version>
+            <version>${iotdb.version}</version>
 <!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
@@ -36,7 +37,7 @@
         <dependency>
             <groupId>org.apache.iotdb</groupId>
             <artifactId>iotdb-jdbc</artifactId>
-            <version>2.0.4-SNAPSHOT</version>
+            <version>${iotdb.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
         <dependency>
