Fix DataIterator query null value assertion exception

--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -28,8 +28,8 @@ url=127.0.0.1:6667
 
 # |---------Cluster configuration---------|
 # leader node
-hosts=iotdb-63
+hosts=127.0.0.1:6667
 # all nodes
-host_nodes=172.20.31.63:6667,172.20.31.65:6667,172.20.31.70:6667
+host_nodes=127.0.0.1:6667,127.0.0.1:6668,127.0.0.1:6669
 
 
