Add script for testing code coverage,optimize the test logic for activating templates, resolve the occasional 507: Template is being unsetting from path root.template16. Please try activating later issue, and rename the test deactivation template method.

--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -16,7 +16,7 @@ auto_create_schema=true
 max_database_length=10
 # Timestamp (partially used)
 time_base=2022-12-31 23:59:56
-# coverage switch
+# coverage switch(warning: Please do not enable this configuration in functional testing, as it will cause issues with parsing CSV files.)
 is_coverage=false
 
 # |---------Single configuration---------|
