--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,18 @@
             <version>23.0.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!--    用于输出日志信息    -->
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-api</artifactId>-->
+<!--            <version>1.7.36</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>ch.qos.logback</groupId>-->
+<!--            <artifactId>logback-classic</artifactId>-->
+<!--            <version>1.2.11</version>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
         <pluginManagement>
