Resolve warnings after partial code analysis,Supplement the README.md

--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -1,11 +1,22 @@
-# |---------basic configuration---------|
+# |---------iotdb connection configuration---------|(If a non-default IoTDB configuration is used, it will cause some default scenario tests to report errors, and this test case needs to be skipped)
+# Tree model address
+host=127.0.0.1
+port=6667
+# Table model address
+url=127.0.0.1:6667
+# leader node
+hosts=127.0.0.1:6667
+# all nodes
+host_nodes=127.0.0.1:6667,127.0.0.1:6668,127.0.0.1:6669
+# UserName and password (By default, the open-source version is tested. If you need to test the enterprise version, you need to configure and use the enterprise version's JAR package)
+user=root
+password=root
+
+# |---------test configuration---------|
 # Cluster switch
 is_cluster=false
 # sessionPool switch
 is_sessionPool=false
-# UserName and password
-user=root
-password=root
 # Aligned switch
 isAligned=true
 # redundant switch (using tree models)
@@ -19,17 +30,5 @@ time_base=2022-12-31 23:59:56
 # coverage switch(warning: Please do not enable this configuration in functional testing, as it will cause issues with parsing CSV files, or may lead to unknown errors.)
 is_coverage=false
 
-# |---------Single configuration---------|
-# Tree model address
-host=127.0.0.1
-port=6667
-# Table model address
-url=127.0.0.1:6667
-
-# |---------Cluster configuration---------|
-# leader node
-hosts=127.0.0.1:6667
-# all nodes
-host_nodes=127.0.0.1:6667,127.0.0.1:6668,127.0.0.1:6669
 
 
