Incorporate SessionPool into testing

--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -16,7 +16,7 @@ password=root
 # Cluster switch
 is_cluster=false
 # sessionPool switch
-is_sessionPool=false
+is_sessionPool=true
 # Aligned switch
 isAligned=true
 # redundant switch (using tree models)
